syntax = "proto3";

package employee;

service Employee {
    rpc paySalary (EmployeeRequest) returns (stream EmployeeResponse) {};
}

message EmployeeRequest {
    repeated int32 employeeIdList = 1;
}

message EmployeeResponse {
    string message = 1;
}

// protoc --js_out=import_style=commonjs,binary:./proto .\employee.proto
// grpc_tools_node_protoc --grpc_out=grpc_js:./proto .\employee.proto
